--- a/source/references.bib
+++ b/source/references.bib
@@ -8,3 +8,46 @@ publisher={Institute of Electrical and Electronics Engineers},
 url={https://cibm.ch/research/publications/landmark-detection-for-fusion-of-fundus-and-mri-towards-a-patient-specific-multi-modal-eye-model/}
 }
 
+@BOOK{2002:panoram,
+author = {Can, Ali and Stewart, Charles and Roysam, Badrinath and Tanenbaum, H},
+year = {2002},
+month = {04},
+pages = {347-364},
+title = {A Feature-Based, Robust, Hierarchical Algorithm for Registering Pairs of Images of the Curved Human Retina},
+volume = {24},
+publisher={Institute of Electrical and Electronics Engineers},
+journal = {Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+doi = {10.1109/34.990136}
+}
+
+@BOOK{2006:imaging,
+author = {Thitiporn Chanwimaluang},
+year = {2006},
+month = {12},
+pages = {},
+title = {ADVANCED RETINAL IMAGING: FEATURE EXTRACTION, 2-D REGISTRATION, AND 3-D RECONSTRUCTION},
+publisher={Oklahoma State University},
+url={https://shareok.org/bitstream/handle/11244/7849/Chanwimaluang_okstate_0664D_2094.pdf?sequence=1&isAllowed=y}
+}
+
+@BOOK{2008:reconstruction,
+author = {Lin, Yuping and Medioni, Gérard},
+year = {2008},
+month = {06},
+pages = {},
+title = {Retinal image registration from 2D to 3D},
+publisher={Institute of Electrical and Electronics Engineers},
+journal = {Proceedings of IEEE Symposium on Computer Vision and Pattern Recognition},
+doi = {10.1109/CVPR.2008.4587705}
+}
+
+@BOOK{2022:rotation,
+author = {Ohlendorf, Arne and Schaeffel, Frank and Wahl, Siegfried},
+year = {2022},
+month = {01},
+pages = {},
+title = {Positions of the horizontal and vertical centre of rotation in eyes with different refractive errors},
+volume = {42},
+publisher = {Ophthalmic and Physiological Optics},
+doi = {10.1111/opo.12940}
+}
